tests/atest/rules/errors/not_enough_whitespace_after_newline_marker/settings_errors.robot
*** Settings ***
Default Tags  tag
... tag2

Force Tags  tag
..    tag2